api/cs/Indigo.cs

using System;
using System.Collections.Generic;
using System.Text;
using System.Runtime.InteropServices;
using System.IO;
using System.Drawing;

namespace com.gga.indigo
{
   public unsafe class Indigo : IDisposable
   {
      [DllImport("kernel32")]
      public static extern IntPtr LoadLibrary(string lpFileName);

      private long _sid = -1;

      public long getSID ()
      {
         return _sid;
      }

      public String version ()
      {
         return new String(indigoVersion());
      }

      private static void _handleError (sbyte* message, Indigo self)
      {
         throw new IndigoException(new String(message));
      }

      private String dllpath;

      public String getDllPath ()
      {
         return dllpath;
      }

      private ErrorHandler _errh;

      private void init (string prefix)
      {
         string subprefix = (IntPtr.Size == 8) ? "Win/x64/" : "Win/x86/";

         dllpath = prefix + "\\" + subprefix;
         LoadLibrary(dllpath + "zlib.dll");
         LoadLibrary(dllpath + "indigo.dll");

         _sid = indigoAllocSessionId();
         indigoSetSessionId(_sid);
         _errh = new ErrorHandler(_handleError);
         indigoSetErrorHandler(_errh, this);
      }

      public Indigo (string prefix)
      {
         init(prefix);
      }

      public Indigo ()
      {
         init("./lib");
      }

      ~Indigo ()
      {
         Dispose();
      }

      public void Dispose()
      {
         if (_sid >= 0)
         {
            indigoReleaseSessionId(_sid);
            _sid = -1;
         }
      }

      public void setSessionID ()
      {
         indigoSetSessionId(_sid);
      }

      private void onError()
      {
         throw new IndigoException(new String(indigoGetLastError()));
      }

      public void free (int id)
      {
         setSessionID();
         indigoFree(id);
      }

      public int countReferences ()
      {
         setSessionID();
         return indigoCountReferences();
      }

      public void setOption (string name, string value)
      {
         setSessionID();
         indigoSetOption(name, value);
      }

      public void setOption (string name, int x, int y)
      {
         setSessionID();
         indigoSetOptionXY(name, x, y);
      }

      public void setOption (string name, bool value)
      {
         setSessionID();
         indigoSetOptionBool(name, value ? 1 : 0);
      }

      public void setOption (string name, float value)
      {
         setSessionID();
         indigoSetOptionFloat(name, value);
      }

      public void setOption (string name, Color value)
      {
         setSessionID();
         indigoSetOptionColor(name, value.R / 255.0f, value.G / 255.0f, value.B / 255.0f);
      }

      public IndigoObject writeFile (String filename)
      {
         setSessionID();
         return new IndigoObject(this, indigoWriteFile(filename));
      }

      public IndigoObject writeBuffer ()
      {
         setSessionID();
         return new IndigoObject(this, indigoWriteBuffer());
      }

      public IndigoObject loadMolecule (String str)
      {
         setSessionID();
         return new IndigoObject(this, indigoLoadMoleculeFromString(str));
      }

      public IndigoObject loadMolecule (byte[] buf)
      {
         setSessionID();
         return new IndigoObject(this, indigoLoadMoleculeFromBuffer(buf, buf.Length));
      }

      public IndigoObject loadMoleculeFromFile (String path)
      {
         setSessionID();
         return new IndigoObject(this, indigoLoadMoleculeFromFile(path));
      }

      public IndigoObject loadQueryMolecule (String str)
      {
         setSessionID();
         return new IndigoObject(this, indigoLoadQueryMoleculeFromString(str));
      }

      public IndigoObject loadQueryMolecule (byte[] buf)
      {
         setSessionID();
         return new IndigoObject(this, indigoLoadQueryMoleculeFromBuffer(buf, buf.Length));
      }

      public IndigoObject loadQueryMoleculeFromFile (String path)
      {
         setSessionID();
         return new IndigoObject(this, indigoLoadQueryMoleculeFromFile(path));
      }

      public IndigoObject loadSmarts (String str)
      {
         setSessionID();
         return new IndigoObject(this, indigoLoadSmartsFromString(str));
      }

      public IndigoObject loadSmarts (byte[] buf)
      {
         setSessionID();
         return new IndigoObject(this, indigoLoadSmartsFromBuffer(buf, buf.Length));
      }

      public IndigoObject loadSmartsFromFile (String path)
      {
         setSessionID();
         return new IndigoObject(this, indigoLoadSmartsFromFile(path));
      }

      public IndigoObject loadReaction (String str)
      {
         setSessionID();
         return new IndigoObject(this, indigoLoadReactionFromString(str));
      }

      public IndigoObject loadReaction (byte[] buf)
      {
         return new IndigoObject(this, indigoLoadReactionFromBuffer(buf, buf.Length));
      }

      public IndigoObject loadReactionFromFile (String path)
      {
         setSessionID();
         return new IndigoObject(this, indigoLoadReactionFromFile(path));
      }

      public IndigoObject loadQueryReaction (String str)
      {
         setSessionID();
         return new IndigoObject(this, indigoLoadQueryReactionFromString(str));
      }

      public IndigoObject loadQueryReaction (byte[] buf)
      {
         return new IndigoObject(this, indigoLoadQueryReactionFromBuffer(buf, buf.Length));
      }

      public IndigoObject loadQueryReactionFromFile (String path)
      {
         setSessionID();
         return new IndigoObject(this, indigoLoadQueryReactionFromFile(path));
      }

      public IndigoObject createReaction ()
      {
         setSessionID();
         return new IndigoObject(this, indigoCreateReaction());
      }

      public IndigoObject createQueryReaction ()
      {
         setSessionID();
         return new IndigoObject(this, indigoCreateQueryReaction());
      }

      public bool exactMatch (IndigoObject obj1, IndigoObject obj2)
      {
         setSessionID();
         return indigoExactMatch(obj1.self, obj2.self) == 1;
      }

      public IndigoObject createArray ()
      {
         setSessionID();
         return new IndigoObject(this, indigoCreateArray());
      }

      public float similarity (IndigoObject obj1, IndigoObject obj2, string metrics)
      {
         setSessionID();
         if (metrics == null)
            metrics = "";
         return indigoSimilarity(obj1.self, obj2.self, metrics);
      }

      public int commonBits (IndigoObject obj1, IndigoObject obj2)
      {
         setSessionID();
         return indigoCommonBits(obj1.self, obj2.self);
      }

      public System.Collections.IEnumerable iterateSDFile (string filename)
      {
         setSessionID();
         return new IndigoObject(this, Indigo.indigoIterateSDFile(filename));
      }

      public System.Collections.IEnumerable iterateRDFile (string filename)
      {
         setSessionID();
         return new IndigoObject(this, Indigo.indigoIterateRDFile(filename));
      }

      public System.Collections.IEnumerable iterateSmilesFile (string filename)
      {
         setSessionID();
         return new IndigoObject(this, Indigo.indigoIterateSmilesFile(filename));
      }

      public IndigoObject matchSubstructure (IndigoObject query, IndigoObject target)
      {
         setSessionID();
         int res = indigoMatchSubstructure(query.self, target.self);
         if (res == 0)
            return null;
         return new IndigoObject(this, res);
      }

      public int countSubstructureMatches (IndigoObject query, IndigoObject target)
      {
         setSessionID();
         return indigoCountSubstructureMatches(query.self, target.self);
      }

      public IndigoObject extractCommonScaffold (IndigoObject structures, string options)
      {
         setSessionID();
         int res = indigoExtractCommonScaffold(structures.self, options);
         if (res == 0)
            return null;
         return new IndigoObject(this, res);
      }

      public IndigoObject decomposeMolecules (IndigoObject scaffold, IndigoObject structures)
      {
         setSessionID();
         return new IndigoObject(this, indigoDecomposeMolecules(scaffold.self, structures.self));
      }

      public IndigoObject reactionProductEnumerate (IndigoObject reaction, IndigoObject monomers)
      {
         setSessionID();
         return new IndigoObject(this, indigoReactionProductEnumerate(reaction.self, monomers.self));
      }

      [DllImport("indigo.dll")]
      public static extern sbyte * indigoVersion ();

      public delegate void ErrorHandler (sbyte* message, Indigo context);

      [DllImport("indigo.dll")]
      public static extern long indigoAllocSessionId ();
      [DllImport("indigo.dll")]
      public static extern void indigoSetSessionId (long id);
      [DllImport("indigo.dll")]
      public static extern void indigoReleaseSessionId (long id);
      [DllImport("indigo.dll")]
      public static extern sbyte * indigoGetLastError ();
      [DllImport("indigo.dll")]
      public static extern void indigoSetErrorHandler (ErrorHandler handler, Indigo context);
      [DllImport("indigo.dll")]
      public static extern void indigoSetErrorMessage (String message);
      [DllImport("indigo.dll")]
      public static extern int indigoFree (int id);
      [DllImport("indigo.dll")]
      public static extern int indigoClone (int id);
      [DllImport("indigo.dll")]
      public static extern int indigoCountReferences ();

      [DllImport("indigo.dll")]
      public static extern int indigoSetOption (string name, string value);
      [DllImport("indigo.dll")]
      public static extern int indigoSetOptionInt (string name, int value);
      [DllImport("indigo.dll")]
      public static extern int indigoSetOptionBool (string name, int value);
      [DllImport("indigo.dll")]
      public static extern int indigoSetOptionFloat (string name, float value);
      [DllImport("indigo.dll")]
      public static extern int indigoSetOptionColor (string name, float r, float g, float b);
      [DllImport("indigo.dll")]
      public static extern int indigoSetOptionXY (string name, int x, int y);

      [DllImport("indigo.dll")]
      public static extern int indigoReadFile (string filename);
      [DllImport("indigo.dll")]
      public static extern int indigoReadString (string str);
      [DllImport("indigo.dll")]
      public static extern int indigoLoadString (string str);
      [DllImport("indigo.dll")]
      public static extern int indigoReadBuffer (string buffer, int size);
      [DllImport("indigo.dll")]
      public static extern int indigoLoadBuffer (string buffer, int size);
      [DllImport("indigo.dll")]
      public static extern int indigoWriteFile (string filename);
      [DllImport("indigo.dll")]
      public static extern int indigoWriteBuffer ();
